[package]
name = "tuma"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aptos-bcs = "0.1.4"
async-trait = "0.1.89"
axum = {version = "0.8.4", features = ["macros", "json"]}
bigdecimal = {version = "0.4.8", features = ["serde"]}
chrono = {version = "0.4.41", features = ["serde", "clock"]}
diesel = {version = "2.2.10", features = ["postgres", "serde_json", "chrono", "r2d2", "numeric"]}
diesel-derive-enum = {version =  "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
rand = "0.9.2"
reqwest = "0.12.23"
serde = {version = "1.0.219", features = ["derive", "rc"]}
serde_json = {version = "1.0.140", features = ["preserve_order"]}
sha3 = "0.10.8"
tokio = { version = "1.45.1", features = ["full"]}
aptos-rust-sdk = { git = "https://github.com/porkytheblack/aptos-rust-sdk.git", package = "aptos-rust-sdk", branch = "fix/get-transaction-hash"}
aptos-crypto = { git = "https://github.com/porkytheblack/aptos-rust-sdk.git",  package = "aptos-crypto", branch = "fix/get-transaction-hash"}
aptos-rust-sdk-types = { git = "https://github.com/porkytheblack/aptos-rust-sdk.git", package = "aptos-rust-sdk-types", branch = "fix/get-transaction-hash"}